<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_login_name"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/login_github_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_github_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_github_button"
        app:layout_constraintBottom_toTopOf="@id/login_google_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_name_textview" />

    <Button
        android:id="@+id/login_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_google_button"
        app:layout_constraintBottom_toTopOf="@id/login_phone_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_github_button" />

    <Button
        android:id="@+id/login_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_phone_button"
        app:layout_constraintBottom_toTopOf="@id/phone_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_google_button" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="+7 999 999-88-55"
        app:layout_constraintBottom_toTopOf="@id/sms_code_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_phone_button" />

    <EditText
        android:id="@+id/sms_code_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:inputType="number"
        android:text="147258"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sms_code_button"
        app:layout_constraintTop_toBottomOf="@id/phone_edittext" />

    <Button
        android:id="@+id/sms_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_sms_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/sms_code_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>